# evrythng-c-library

./: .gitignore  CMakeLists.txt  README.md  demo.sh  makefile
cmake/: evrythng.cmake  mqtt.cmake  toolchainfile.cmake
demo/: CMakeLists.txt  evrythng-cli.c  run.sh
docs/: Doxyfile  evrythng-doxygen.css
embedded-mqtt/MQTTClient-C/samples/FreeRTOS/: MQTTEcho.c
embedded-mqtt/MQTTClient-C/samples/linux/: stdoutsub
embedded-mqtt/MQTTClient-C/src/: MQTTClient.c  MQTTClient.h  MQTTPlatform.h
embedded-mqtt/MQTTClient-C/src/linux/: MQTTLinux.c  MQTTLinux.h
embedded-mqtt/MQTTPacket/src/: MQTTDeserializePublish.c  MQTTFormat.c  MQTTPublish.h
evrythng/include/: evrythng.h  platform.h
evrythng/include/evrythng/: evrythng.h  platform.h
evrythng/src/: evrythng.c  evrythng_api.c  evrythng_core.c  evrythng_tls_certificate.h
mqtt/src/: Clients.h  Heap.c  Heap.h  LinkedList.c  Log.h  MQTTAsync.c  MQTTClient.c  MQTTClient.h  MQTTPacket.c  MQTTPacket.h  MQTTPacketOut.c  MQTTProtocolClient.c  MQTTProtocolOut.c  MQTTProtocolOut.h  Messages.c  SSLSocket.c  SSLSocket.h  Socket.c  Socket.h  SocketBuffer.c  SocketBuffer.h  StackTrace.h  TLSSocket.c  TLSSocket.h  Thread.c  Thread.h  Tree.c  marvell_api.c  marvell_api.h
tests/: CMakeLists.txt  Config  CuTest.c  CuTest.h  evrythng_config.h  gen_header.sh  main.c  tests.c  tests.h
